# outlier_gpt

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  justfile  pyproject.toml  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md
docs/: index.md  installation.md  usage.md
outlier_gpt/: __init__.py  utils.py
outlier_gpt/agents/: __init__.py  api_client.py  core.py  prompter.py
outlier_gpt/techniques/: __init__.py  outlier_detection.py
tests/: __init__.py
tests/test_agents/: test_api_clients.py  test_core.py  test_prompter.py
tests/test_techniques/: test_outlier_detection.py
